fare/src/main/resources/openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: m-caj-fare
  labels:
    app: m-caj-fare
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m-caj-fare
      version: v1
  template:
    metadata:
      labels:
        app: m-caj-fare
        version: v1
    spec:
      containers:
        - name: m-caj-fare
          image: 'quay.io/ske/m-caj-fare:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
