fare/src/main/resources/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: m-caj-fare
spec:
  host: m-caj-fare-${STUDENT_ID}.apps.cluster-zghzl.zghzl.sandbox852.opentlc.com
  to:
    kind: Service
    name: m-caj-fare
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
